--- a/qemu/hw/misc/Kconfig
+++ b/qemu/hw/misc/Kconfig
@@ -20,13 +20,13 @@ config ISA_TESTDEV
     default y if TEST_DEVICES
     depends on ISA_BUS
 
-config ISA_FFT_ACC
-    bool
-    default y if TEST_DEVICES
-
 config PCI_TESTDEV
     bool
     default y if TEST_DEVICES
+    depends on PCI
+
+config PCI_FFTDEV
+    bool
     depends on PCI
 
 config EDU
